Fix vertical alignment of tree icons by using <img> nodes rather than <div> nodes, thus making everything inline (w/vertical-align: middle) rather than inline-block. Fixes #6475, refs #1728.  !strict
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14104 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/tests/css/dijitTests.css
+++ b/tests/css/dijitTests.css
@@ -55,13 +55,11 @@ h1.testTitle {
 	visibility:visible; 
 }
 
-.customFolderOpenedIcon, .customFolderClosedIcon {
+body .customFolderOpenedIcon, body .customFolderClosedIcon {
 	background-image: url('../../demos/mail/icons.png'); /* mail icons sprite image */
 	background-repeat: no-repeat;
-	width: 16px;
-	height: 16px;
-	text-align: center;
-	padding-right:4px;
+	width: 18px;
+	height: 18px;
     background-position: -44px;
 }
 
