--- a/themes/nihilo/Tree.css
+++ b/themes/nihilo/Tree.css
@@ -32,7 +32,6 @@
 .nihilo .dijitTreeContent {
     min-height: 18px;
     min-width: 18px;
-    padding-top:3px;
     padding-left:1px;
 }
 
