--- a/themes/tundra/Tree.css
+++ b/themes/tundra/Tree.css
@@ -27,9 +27,7 @@
 .tundra .dijitTreeContent {
     min-height: 18px;
     min-width: 18px;
-    padding-top:3px;
-}
-
+ }
 
 .tundra .dijitTreeExpand {
     width: 18px;
